--- a/InvertedVeeAntennaCalculator/InvertedVeeAntennaCalculator/InvertedVeeAntennaCalculator.csproj
+++ b/InvertedVeeAntennaCalculator/InvertedVeeAntennaCalculator/InvertedVeeAntennaCalculator.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="AntennaBuilder.cs" />
     <Compile Include="CalculatorService.cs" />
+    <Compile Include="NotEnoughSpaceException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
